# KinectFusion

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
flann/: general.h
flann/algorithms/: dist.h  kdtree_index.h
flann/util/: heap.h  lsh_table.h  random.h  serialization.h
kinect_fusion/: CMakeLists.txt  fix_generated_cuda.py  fusion.cu  fusion_main.cpp  icp_main.cpp  texture_3d.cpp  viewer.cpp
kinect_fusion/helper/: CMakeLists.txt  FreeImageHelper.h  ICPOptimizer.h  PointCloud.h  VirtualSensor.h  vulkan_helper.h
kinect_fusion/shaders/: device_host.h  icp.slang  perlin.slang  raster.slang
plots/: plot_vol.py  vol_run_time.py
